--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Apache::GuessCharset
 
+0.03  Sat May 11 13:31:31 JST 2002
+	* handles any text/* requests without charset attribute
+	* charset attribute is now lowercased
+	- returns DECLINED if not in main request
+	- added mock test code
+
 0.02  Fri May  3 22:27:43 JST 2002
 	- uses $r->finfo and fixed some style issue
 	  (Thanks to Geoffrey Young <geoff@modperlcookbook.org>)
